2011-03-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_valve_surface.m: v0.2

	- Add 'tsi' option to interpolate using Matlab's
	TriScatteredInterp() function.

	* Add ThirdPartyToolbox/gridfit.m: v2.0

	- By John D'Errico

	- estimates a surface on a 2d grid, based on scattered data
	Replicates are allowed. All methods extrapolate to the grid
	boundaries. Gridfit uses a modified ridge estimator to generate
	the surface, where the bias is toward smoothness.
 
        Gridfit is not an interpolant. Its goal is a smooth surface that
	approximates your data, but allows you to control the amount of
	smoothing.

	* Add ThirdPartyToolbox/L2_distance.m

	- L2_DISTANCE - computes Euclidean distance matrix

	- By Roland Bunschoten

	- Requirement of the isomap functions.

2011-03-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add ThirdPartyToolbox/Isomap.m, ThirdPartyToolbox/IsomapII.m

	- Add modified code from Josh Tenenbaum, to compute Isomap
	embedding using an advanced version of the algorithm in Tenenbaum,
	de Silva, and Langford (2000), which can take advantage of
	sparsity in the graph and redundancy in the distances.

	* CardiacToolbox/scinrrd_valve_surface.m: v0.1

	- Add Isomap function to compute interpolation domain.

	- Rewrite the function to be able to use different methods to
	compute the interpolation domain, use different interpolants and
	the factor for the interpolation domain size.

	- Correct the way the interpolation is computed for the PCA
	method. I was rotating the horizontal domain, interpolation and
	rotating back, but this is incorrect because it does not give you
	the same point.

2011-03-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/dmatrix.m: v3.0

	- Fix copyright notice to be uniform with the rest of Gerardus.

	- Add input argument METHOD to select other distances than
	Euclidean.

	* Add PointsToolbox/plot_dmatrix.m

	- PLOT_DMATRIX Plot the connections implied by a distance matrix.